DOMException should be Serializable https://bugs.webkit.org/show_bug.cgi?id=224865

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

DOMException is now serializable, rebaseline related tests.

* web-platform-tests/html/infrastructure/safe-passing-of-structured-data/structured-cloning-error-stack-optional.sub.window-expected.txt:
* web-platform-tests/html/infrastructure/safe-passing-of-structured-data/structuredclone_0-expected.txt:

Source/WebCore:

Implement serialization of DOMException objects.

No new tests, rebaselined existing tests.

* bindings/js/SerializedScriptValue.cpp:

LayoutTests:

* storage/indexeddb/resources/structured-clone.js: Cloning DOMException is valid.
* storage/indexeddb/resources/structured-clone-expected.txt:


Canonical link: https://commits.webkit.org/236849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276372 268f45cc-cd09-0410-ab3c-d52691b4dbfc